# sh_data_provider

./: CMakeLists.txt  dbfeeder.cpp  dbfeeder.h  httpserver.cpp  httpserver.h  main.cpp  sensordata.h  sensorreader.cpp  sensorreader.h  toolchain.txt
